Class WorldBody became WorldObject and functionnal with : Triangle, Square, Rect ; Dynamic and Static bodies.

--- a/Box2DSetup/Box2DSetup.vcxproj.filters
+++ b/Box2DSetup/Box2DSetup.vcxproj.filters
@@ -23,7 +23,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\WorldBody.h">
+    <ClInclude Include="src\WorldObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
