--- a/Box2DSetup/Box2DSetup.vcxproj
+++ b/Box2DSetup/Box2DSetup.vcxproj
@@ -151,7 +151,7 @@
     <ClCompile Include="src\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\WorldBody.h" />
+    <ClInclude Include="src\WorldObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
