Polymorphic class Robot created, now able to keep & use a list of all  WorldObject. Next : liaison with neural network

--- a/Box2DSetup/Box2DSetup.vcxproj
+++ b/Box2DSetup/Box2DSetup.vcxproj
@@ -147,10 +147,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Robot.cpp" />
     <ClCompile Include="src\WorldBody.cpp" />
     <ClCompile Include="src\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\JointFactory.h" />
+    <ClInclude Include="src\Robot.h" />
     <ClInclude Include="src\WorldObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
