--- a/Box2DSetup/Box2DSetup.vcxproj.filters
+++ b/Box2DSetup/Box2DSetup.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClCompile Include="src\WorldBody.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Robot.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\WorldObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Robot.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\JointFactory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
